Correctly collapse caption callout

--- a/publish.css
+++ b/publish.css
@@ -683,15 +683,14 @@ body {
 }
 
 .callout[data-callout=caption] {
+  --p-spacing: 0;
   border: none;
   background: none;
-  --p-spacing: 0;
   display: flex;
   flex-direction: column-reverse;
 }
 .callout[data-callout=caption] .callout-title {
   font-size: 0.8em;
-  display: block;
   width: fit-content;
   margin-inline-end: auto;
   font-style: italic;
@@ -709,10 +708,19 @@ body {
 .callout[data-callout=caption] .callout-icon {
   display: none;
 }
+.callout[data-callout=caption] .callout-fold {
+  order: -1;
+  padding-inline-end: 0;
+}
 .callout[data-callout=caption] .callout-content {
   padding: 0;
   border: none;
   border-left: 1px solid rgb(var(--callout-color));
+  overflow: hidden;
+}
+
+.callout[data-callout=caption].is-collapsed .callout-title {
+  inset-block-start: unset;
 }
 
 .callout[data-callout=caption][data-callout-metadata~=accent] .callout-title {
@@ -3553,12 +3561,18 @@ body {
   margin: var(--fas-float-inline-margin, 12px) 0 var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px);
   max-width: 300px;
 }
+.markdown-preview-view .callout:is([data-callout-metadata~=right], [data-callout-metadata~=float-right]) img {
+  max-width: calc(299px - var(--image-shadow-offset));
+}
 
 .markdown-preview-view .callout:is([data-callout-metadata~=left], [data-callout-metadata~=float-left]) {
   float: left;
   clear: left;
   margin: var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) 0;
   max-width: 300px;
+}
+.markdown-preview-view .callout:is([data-callout-metadata~=left], [data-callout-metadata~=float-left]) img {
+  max-width: calc(299px - var(--image-shadow-offset));
 }
 
 .callout[data-callout-metadata~=clear] {
