--- a/snippets/editor/callouts/callout-caption.css
+++ b/snippets/editor/callouts/callout-caption.css
@@ -8,15 +8,14 @@ body {
 }
 
 .callout[data-callout=caption] {
+  --p-spacing: 0;
   border: none;
   background: none;
-  --p-spacing: 0;
   display: flex;
   flex-direction: column-reverse;
 }
 .callout[data-callout=caption] .callout-title {
   font-size: 0.8em;
-  display: block;
   width: fit-content;
   margin-inline-end: auto;
   font-style: italic;
@@ -34,10 +33,19 @@ body {
 .callout[data-callout=caption] .callout-icon {
   display: none;
 }
+.callout[data-callout=caption] .callout-fold {
+  order: -1;
+  padding-inline-end: 0;
+}
 .callout[data-callout=caption] .callout-content {
   padding: 0;
   border: none;
   border-left: 1px solid rgb(var(--callout-color));
+  overflow: hidden;
+}
+
+.callout[data-callout=caption].is-collapsed .callout-title {
+  inset-block-start: unset;
 }
 
 .callout[data-callout=caption][data-callout-metadata~=accent] .callout-title {
