--- a/snippets/editor/callouts/callouts-metadata.css
+++ b/snippets/editor/callouts/callouts-metadata.css
@@ -138,12 +138,18 @@ body {
   margin: var(--fas-float-inline-margin, 12px) 0 var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px);
   max-width: 300px;
 }
+.markdown-preview-view .callout:is([data-callout-metadata~=right], [data-callout-metadata~=float-right]) img {
+  max-width: calc(299px - var(--image-shadow-offset));
+}
 
 .markdown-preview-view .callout:is([data-callout-metadata~=left], [data-callout-metadata~=float-left]) {
   float: left;
   clear: left;
   margin: var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) 0;
   max-width: 300px;
+}
+.markdown-preview-view .callout:is([data-callout-metadata~=left], [data-callout-metadata~=float-left]) img {
+  max-width: calc(299px - var(--image-shadow-offset));
 }
 
 .callout[data-callout-metadata~=clear] {
